<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_0"
        android:icon="@drawable/ic_today"
        android:title="@string/main_menu_0"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_1"
        android:title="@string/main_menu_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_2"
        android:title="@string/main_menu_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_2_5"
        android:title="@string/main_menu_2_5" />
    <item
        android:id="@+id/main_menu_3"
        android:title="@string/main_menu_3"
        app:showAsAction="never" />
</menu>