<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/popup_bg_dark" />

    <androidx.cardview.widget.CardView
        android:id="@+id/popup.cv_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar.Bridge"
        app:cardBackgroundColor="@color/white_pressed"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/popup.about.tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sdle_sft_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/black_transparent_33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup.about.tv_header">

            </FrameLayout>

            <TextView
                android:id="@+id/sft.help_tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sdle_help_text2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/sft.help_tv2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdle_help_text2_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sft.help_tv1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_black_trans_rounded"
                android:padding="1dp"
                app:layout_constraintBottom_toBottomOf="@id/sft.help_tv2_1"
                app:layout_constraintStart_toEndOf="@+id/sft.help_tv2_1"
                app:layout_constraintTop_toTopOf="@+id/sft.help_tv2_1"
                app:srcCompat="@drawable/ic_save"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/sft.help_tv2_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sdle_help_text2_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/sft.help_tv2_1" />

            <TextView
                android:id="@+id/sft.help_tv3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/sdle_help_text3_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sft.help_tv2_1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_black_trans_rounded"
                android:padding="1dp"
                app:layout_constraintBottom_toBottomOf="@+id/sft.help_tv3_1"
                app:layout_constraintStart_toEndOf="@+id/sft.help_tv3_1"
                app:layout_constraintTop_toTopOf="@+id/sft.help_tv3_1"
                app:srcCompat="@drawable/ic_calendar_clear_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/sft.help_tv3_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sdle_help_text3_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/sft.help_tv3_1" />

            <Button
                android:id="@+id/popup.btn_ok"
                style="@style/AppTheme.MaterialBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/ok"
                android:textColor="@color/black_semi_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sft.help_tv3_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>